fix: set background color and spacing.

--- a/Tribute/styles.css
+++ b/Tribute/styles.css
@@ -1,6 +1,13 @@
 body {
+  background-color: #d3d3d3;
 font-family: Verdana, sans-serif;
 font-size: 16px;
+}
+
+figure {
+background-color: white;
+margin: auto;
+padding-top: 15px;
 }
 
 figcaption {
@@ -18,6 +25,7 @@ text-align: center;
 }
 
 h1, h2 {
+  margin: 3px;
 text-align: center;
 }
 
@@ -27,4 +35,4 @@ img {
   margin: auto;
   max-width: 100%;
   width: 90%;
-} 
+}
